<resources>
    <string name="app_name">NMedia</string>
    <string name="avatar">avatar</string>
    <string name="likes">likes</string>
    <string name="reposts">reposts</string>
    <string name="views">views</string>
    <string name="menu">menu</string>
    <string name="options_post_remove">Remove</string>
    <string name="save">save</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="options_post_edit">Edit</string>
    <string name="cancel">cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="video">video</string>
    <string name="play_video">play video</string>
    <string name="confirmation">Confirmation</string>
    <string name="exit_the_program">Exit the program?</string>
    <string name="exit_post_editing_mode">Exit post editing mode?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_new_posted">%1$s posted a new post</string>
    <string name="error_action_title">Error</string>
    <string name="error_loading">Error loading</string>
    <string name="retry_loading">Retry loading</string>
    <string name="empty_posts">Empty posts</string>
    <string name="description_post_attachment">attachment</string>
    <string name="description_photo">photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">select photo</string>
    <string name="description_take_photo">take photo</string>
    <string name="description_image">image</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="pass_authorization">Pass authorization?</string>
    <string name="error_authorization">Error Authorization</string>
    <string name="notification">Notification</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last week</string>
</resources>